# Friday

./: .gitignore  holdings.py  main.py  pyproject.toml  zerodha.py
functions/: crawler.py  embeddings.py  search.py
